--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,9 @@ img {
     object-fit: cover;
     object-position: 0 30%;
 }
+@import url('./Navbar.css');
+
+@import url('./home.css');
 
 @import url('./CheckoutForm.css');
 
