--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -65,7 +65,7 @@ body {
 /*----------------page-wrapper----------------*/
 
 .page-wrapper {
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .page-wrapper .theme {
