--- a/styles/signup.css
+++ b/styles/signup.css
@@ -4,8 +4,8 @@
 }
 
 .signup .body {
-    background: #007bff;
-    background: linear-gradient(to right, #d9dde1, #6d7d88);
+    background: whitesmoke;
+    /* background: linear-gradient(to right, #d9dde1, #6d7d88); */
 }
 
 .card-signin {
@@ -24,7 +24,7 @@
 .card-signin .card-img-left {
     width: 45%;
     /* Link to your background image using in the property below! */
-    background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
+    background: scroll center url('https://res.cloudinary.com/nguyenhungdev/image/upload/v1620805596/aothun_media/ukosrhccjmyizsfvnrxe.png');
     background-size: cover;
 }
 
