update-signin.css

--- a/styles/signin.css
+++ b/styles/signin.css
@@ -113,7 +113,7 @@
 /* Fallback for Edge
   -------------------------------------------------- */
 
-.signin @supports (-ms-ime-align: auto) {
+@supports (-ms-ime-align: auto) {
     .form-label-group>label {
         display: none;
     }
@@ -126,7 +126,7 @@
 /* Fallback for IE
   -------------------------------------------------- */
 
-.signin @media all and (-ms-high-contrast: none),
+@media all and (-ms-high-contrast: none),
 (-ms-high-contrast: active) {
     .form-label-group>label {
         display: none;
@@ -207,17 +207,17 @@
     color: white;
     background-color: #3b5998;
 }
+
 .auth_page {
     position: relative;
-    
 }
 
-.auth_page small{
+.auth_page small {
     position: absolute;
     top: 50%;
     right: 4px;
     transform: translateY(-50%);
     cursor: pointer;
     opacity: 0.5;
-    padding:0px 3px
+    padding: 0px 3px
 }
